--- a/WeatherApp/Views/Location/LocationViewController.xib
+++ b/WeatherApp/Views/Location/LocationViewController.xib
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="WeatherApp" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LocationViewController" customModule="WeatherApp" customModuleProvider="target">
             <connections>
                 <outlet property="tableView" destination="1D7-MP-HAv" id="fTf-pN-J3i"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
